Intro form validation; Intro animations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,7 +5,10 @@
     "description2": "Complete the form and start protecting your life!",
     "nameLabel": "Name",
     "passwordLabel": "Password",
+    "passwordError": "Password not match especifications",
+    "nameError": "Required",
     "confirmPasswordLabel": "Confirm your password",
+    "confirmPasswordError": "Passwords not Match",
     "passwordPickerTitle": "Type your best password",
     "passwordSuggestionTitle": "Suggestions",
     "passwordSuggestion1": "At least one lowercase",
