--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -5,7 +5,10 @@
     "description2": "Preencha o formulário abaixo e comece a proteger sua vida!",
     "nameLabel": "Nome",
     "passwordLabel": "Senha",
+    "passwordError": "Senha inválida",
+    "nameError": "Campo Obrigatório",
     "confirmPasswordLabel": "Confirme sua senha",
+    "confirmPasswordError": "Senhas não são iguais",
     "passwordPickerTitle": "Digite sua melhor senha",
     "passwordSuggestionTitle": "Sugestões",
     "passwordSuggestion1": "Mínimo 1 letra maiúscula",
