Login page with temp functionality

--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -17,6 +17,12 @@
     "passwordSuggestion4": "Mínimo 8 caracteres",
     "saveUserButtonLabel": "Salvar"
   },
+  "authenticate": {
+    "title": "Bem Vindo",
+    "passwordLabel": "Senha",
+    "passwordError": "Senha incorreta",
+    "enterButtonLabel": "Entrar"
+  },
   "primeng": {
     "startsWith": "Starts with",
     "contains": "Contém",
